--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "joi": "^17.9.2",
     "moment": "^2.29.4",
     "mongoose": "^7.3.2",
-    "morgan": "^1.10.0",
-    "nanoid": "^3.3.4"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
