--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "joi": "^17.9.2",
     "moment": "^2.29.4",
     "mongoose": "^7.3.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nanoid": "3.3.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
