--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "test",
     "start": "node server",
     "start:dev": "nodemon server"
   },
@@ -16,14 +16,19 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.38.0",
     "commander": "^11.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "gravatar": "^1.8.2",
+    "jest": "^29.6.1",
+    "jimp": "^0.22.8",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
